<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gerenciador</string>
    <string name="entrar">Entrar</string>
    <string name="descricaoString">Descrição:</string>
    <string name="descricao">Digite a decrição</string>
    <string name="valorString">Valor:</string>
    <string name="valor">Digite o valor</string>
    <string name="dataString">Data:</string>
    <string name="setData">00/00/0000</string>
    <string name="escolherData">Escolha a data</string>
    <string name="statusString">Status:</string>
    <string name="saldoString">Saldo</string>
    <string name="receitaString">Receita</string>
    <string name="title_activity_add__despesa">Adicionar Despesa</string>
    <string name="paga">Paga</string>
    <string name="naoPaga">Não paga</string>
    <string name="cancelar">Cancelar</string>
    <string name="resetar">Resetar</string>
    <string name="salvar"> Salvar </string>
    <string name="action_settings">Settings</string>


</resources>