<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#6fb8d0"
    android:orientation="vertical"
    tools:context=".Add_Despesa" >

      <TextView
        android:id="@+id/descricao"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/descricaoString"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/descricao"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textShortMessage" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/valor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editDescricao"
        android:text="@string/valorString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editValor"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/valor"
        android:layout_below="@+id/valor"
        android:ems="10"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editValor"
        android:layout_toLeftOf="@+id/SalvarButton"
        android:text="@string/dataString"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/data"
        android:layout_below="@+id/data"
        android:text="@string/escolherData" />

     <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resetarButton"
        android:layout_below="@+id/date_picker_button"
        android:layout_marginTop="14dp"
        android:text="@string/statusString"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/date_picker_button"
        android:layout_marginTop="46dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/statusPaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paga" />

        <RadioButton
            android:id="@+id/statusNaoPaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/naoPaga" />
    </RadioGroup>
    
    <Button
        android:id="@+id/resetarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelarButton"
        android:layout_alignBottom="@+id/cancelarButton"
        android:layout_toLeftOf="@+id/cancelarButton"
        android:text="@string/resetar" />

     <Button
        android:id="@+id/cancelarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SalvarButton"
        android:layout_alignBottom="@+id/SalvarButton"
        android:layout_centerHorizontal="true"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/SalvarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusGroup"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/cancelarButton"
        android:text="@string/salvar" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/SalvarButton"
        android:layout_below="@+id/date_picker_button"
        android:layout_marginRight="14dp"
        android:text="@string/setData" />

</RelativeLayout>